{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 56,
  "lineage": "4be456d8-439f-4f8b-8ead-baa44e2f6df9",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "terraform-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/publicIPAddresses/terraform-public-ip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.25.126",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "terraform-public-ip1",
            "resource_group_name": "terraform-resources",
            "sku": "Basic",
            "tags": {
              "environment": "Sandbox",
              "owner": "Dan"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terraform-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/networkInterfaces/terraform-nic1",
            "internal_domain_name_suffix": "yggr5k5adt3uxlftiagznhtvxe.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/publicIPAddresses/terraform-public-ip1",
                "subnet_id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network/subnets/terraform-virtual-network-subnet-1"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-8B-F2-F7",
            "name": "terraform-nic1",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "terraform-resources",
            "tags": {
              "environment": "Sandbox",
              "owner": "Dan"
            },
            "virtual_machine_id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Compute/virtualMachines/terraform-linux-vm1"
          },
          "dependencies": [
            "azurerm_public_ip.terraform-public-ip1",
            "azurerm_resource_group.terraform-rg",
            "azurerm_subnet.terraform-virtual-network-subnet",
            "azurerm_virtual_network.terraform-virtual-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terraform-virtual-network-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/networkSecurityGroups/terraform-virtual-network-nsg",
            "location": "westeurope",
            "name": "terraform-virtual-network-nsg",
            "resource_group_name": "terraform-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "terraform-virtual-network-nsg-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "92.180.8.159",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Sandbox",
              "owner": "Dan"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terraform-virtual-network-nsg-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/networkSecurityGroups/terraform-virtual-network-nsg/securityRules/terraform-virtual-network-nsg-rule",
            "name": "terraform-virtual-network-nsg-rule",
            "network_security_group_name": "terraform-virtual-network-nsg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terraform-resources",
            "source_address_prefix": "92.180.8.159",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terraform-virtual-network-nsg",
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform-public-ip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/publicIPAddresses/terraform-public-ip1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.71.25.126",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "terraform-public-ip1",
            "resource_group_name": "terraform-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Sandbox",
              "owner": "Dan"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraform-virtual-network-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network/subnets/terraform-virtual-network-subnet-1",
            "name": "terraform-virtual-network-subnet-1",
            "resource_group_name": "terraform-resources",
            "virtual_network_name": "terraform-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg",
            "azurerm_virtual_network.terraform-virtual-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network/subnets/terraform-virtual-network-subnet-1",
            "network_security_group_id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/networkSecurityGroups/terraform-virtual-network-nsg",
            "subnet_id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network/subnets/terraform-virtual-network-subnet-1"
          },
          "dependencies": [
            "azurerm_network_security_group.terraform-virtual-network-nsg",
            "azurerm_resource_group.terraform-rg",
            "azurerm_subnet.terraform-virtual-network-subnet",
            "azurerm_virtual_network.terraform-virtual-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform-virtual-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ab1f8dc1-1ce0-4bfb-acb3-400d969e75bc",
            "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network",
            "location": "westeurope",
            "name": "terraform-virtual-network",
            "resource_group_name": "terraform-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/virtualNetworks/terraform-virtual-network/subnets/terraform-virtual-network-subnet-1",
                "name": "terraform-virtual-network-subnet-1",
                "security_group": "/subscriptions/5899decf-8aed-47c8-a061-88e06d680e87/resourceGroups/terraform-resources/providers/Microsoft.Network/networkSecurityGroups/terraform-virtual-network-nsg"
              }
            ],
            "tags": {
              "environment": "Sandbox",
              "owner": "Dan"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform-rg"
          ]
        }
      ]
    }
  ]
}